correct alignment of GIF and letterbank

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,8 @@ h1 {
 }
 #letterbank {
   line-height:45px;
-
+  display: block;
+  text-align: center;
 }
 #letters a {
     color: white;
@@ -22,7 +23,6 @@ h1 {
     margin: 0px; 3px; 3px; 0px;
     cursor: pointer;
     text-align: center;
-
 }
 #letters a:hover {
   background-color: red;
@@ -40,15 +40,15 @@ h1 {
     font-style: italic;
     font-weight: bold;
     cursor: pointer;
-
     margin: 10px;
 }
 #myCanvas{
-  width: 100%;
+  width: 300px;
   height: 200px;
   text-align: center;
   padding: 0;
-  margin: 20px auto 0 auto;
+  margin: 20px auto 20px auto;
+  display: block;
 }
 .disabled {
   opacity: 0.5;
@@ -57,9 +57,13 @@ h1 {
 #image {
   text-align: center;
   width: 100%;
-
 }
 #result {
   font-family:"Comic Sans MS", cursive, sans-serif;
   color: green;
+}
+#gif {
+  text-align: center;
+  margin: 20px auto 20px auto;
+  display: block;
 }
